More safety system of config loading